--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "geist": "^1.0.0",
     "lucide-react": "^0.287.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
