--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "geist": "^1.2.0",
     "lucide-react": "^0.287.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
