--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/mdx": "^2.0.10",
     "bright": "^0.8.4",
     "class-variance-authority": "^0.7.0",
