--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.0.4",
+    "@next/mdx": "^14.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@types/mdx": "^2.0.10",
     "bright": "^0.8.4",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "geist": "^1.2.0",
+    "clsx": "^2.1.0",
+    "geist": "^1.2.1",
     "lucide-react": "^0.287.0",
-    "next": "14.0.4",
+    "next": "14.1.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -31,17 +32,17 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
+    "@types/node": "^20.11.9",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
+    "eslint-plugin-tailwindcss": "^3.14.1",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
