--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "18.3.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "clsx": "^2.1.1",
     "feed": "^4.2.2",
+    "framer-motion": "^11.4.0",
     "geist": "1.3.1",
     "katex": "^0.16.11",
     "next": "^14.2.7",
@@ -26,7 +28,9 @@
     "react-youtube": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
+    "simplex-noise": "^4.0.3",
     "sugar-high": "^0.7.0",
+    "tailwind-merge": "^2.5.2",
     "typescript": "5.5.4"
   },
   "devDependencies": {
