--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
     "incremental": true,
     "plugins": [
       {
@@ -21,11 +18,8 @@
       }
     ],
     "paths": {
-      "@/ui/*": ["./app/_components/ui/*"],
-      "@/_components/*": ["./app/_components/*"],
       "@/*": ["./*"]
-    },
-    "strictNullChecks": true
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
