--- a/package.json
+++ b/package.json
@@ -1,43 +1,36 @@
 {
+  "name": "duyle.dev",
+  "version": "0.1.0",
   "private": true,
-  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "pnpm biome format --write .",
+    "lint": "pnpm biome lint --write .",
+    "check": "pnpm biome check --write ."
   },
   "dependencies": {
-    "@types/node": "22.5.0",
-    "@types/react": "18.3.4",
-    "@types/react-dom": "18.3.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "bright": "^0.8.5",
     "clsx": "^2.1.1",
-    "feed": "^4.2.2",
-    "framer-motion": "^11.4.0",
-    "geist": "1.3.1",
-    "katex": "^0.16.11",
-    "next": "^14.2.7",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.438.0",
+    "next": "14.2.7",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-icons": "^5.3.0",
-    "react-tweet": "^3.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-wrap-balancer": "^1.1.1",
-    "react-youtube": "^10.1.0",
-    "rehype-katex": "^7.0.1",
-    "remark-math": "^6.0.0",
-    "simplex-noise": "^4.0.3",
-    "sugar-high": "^0.7.0",
-    "tailwind-merge": "^2.5.2",
-    "typescript": "5.5.4"
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@tailwindcss/typography": "^0.5.15",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.44",
-    "tailwindcss": "3.4.10"
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   }
 }
