--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "bright": "^0.8.5",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "geist": "^1.3.1",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
