gradient bg and cleanup

--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,7 @@
       },
       "nursery": {
         "useSortedClasses": {
-          "level": "info",
+          "level": "off",
           "fix": "safe",
           "options": {
             "attributes": ["classList"],
