--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "pnpm biome check --write ."
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "bright": "^0.8.5",
