--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "check": "pnpm biome check --write ."
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.19.9",
     "@radix-ui/react-dialog": "^1.1.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "bright": "^0.8.5",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.6",
     "geist": "^1.3.1",
-    "next": "14.2.11",
+    "next": "14.2.13",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -27,10 +28,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.5",
+    "@types/node": "^20.16.6",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
 }
