--- a/package.json
+++ b/package.json
@@ -12,23 +12,28 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.19.9",
+    "@liveblocks/client": "^2.9.0",
+    "@liveblocks/node": "^2.9.0",
+    "@liveblocks/react": "^2.9.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@uiw/react-signature": "^1.3.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "bright": "^0.8.5",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^11.11.4",
     "geist": "^1.3.1",
     "next": "14.2.14",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
+    "perfect-freehand": "^1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@types/node": "^20.16.10",
+    "@types/node": "^20.16.11",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.13",
