--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@liveblocks/client": "^2.9.0",
     "@liveblocks/node": "^2.9.0",
     "@liveblocks/react": "^2.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@uiw/react-signature": "^1.3.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "bright": "^0.8.5",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.4",
     "geist": "^1.3.1",
