--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,17 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*", "./app/*"],
+      "@/components/*": ["./components/*"],
+      "@/background/*": ["./components/background/*"],
+      "@/header/*": ["./components/header/*"],
+      "@/homepage/*": ["./components/homepage/*"],
+      "@/mdx/*": ["components/blog/*"],
+      "@/polaroid-board/*": ["./components/polaroid-board/*"],
+      "@/ui/*": ["./components/ui/*"],
+      "@/sandpack/*": ["./components/sandpack/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
