--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "perfect-freehand": "^1.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "vaul": "^1.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
